--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "axios": "0.18.0",
+    "babel-preset-es2015": "^6.24.1",
     "vee-validate": "^2.0.9",
     "vue": "2.5.17",
     "vue-material": "1.0.0-beta-10.2",
