--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "vue": "2.5.17",
     "vue-material": "1.0.0-beta-10.2",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vue-web3": "^2.1.0",
+    "vuex": "3.0.1",
+    "web3": "^0.20.7"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.1",
