--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "vue-material": "1.0.0-beta-10.2",
     "vue-router": "3.0.1",
     "vue-web3": "^2.1.0",
+    "vuelidate": "^0.7.4",
     "vuex": "3.0.1",
     "web3": "^0.20.7"
   },
