--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,34 +1,53 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.5.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '2.0.5.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
+
+//bootJar {
+//    baseName = 'gs-accessing-data-jpa'
+//    version =  '0.1.0'
+//}
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'idea'
 
 group = 'bns.df'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    mavenCentral()
+    maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
 }
 
 
 dependencies {
-	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.0.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.0.RELEASE'
 
-	implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
-	implementation('org.springframework.boot:spring-boot-starter-web')
-	runtimeOnly('org.springframework.boot:spring-boot-devtools')
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+// https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.6.Final'
+
+  //  compile("org.springframework.boot:spring-boot-starter-data-jpa")
+   // compile("com.h2database:h2")
+   // testCompile("junit:junit")
+
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+
+
 }
