--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,9 @@
     "eslint-plugin-vue": "^4.7.1",
     "eslint-plugin-vue-libs": "^3.0.0",
     "favicons-webpack-plugin": "0.0.9",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
